Fixed background positioning on mobile, scrolls searchbar into view on focus
Fixed background positioning so it remains consistent when mobile keyboard appears.  On focus, Pokemon and ranking search inputs scroll into view.

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4513,6 +4513,11 @@ a.pokebattler{
 		}
 	}
 
+	body{
+		background-size: 1000px auto;
+		background-position: center top;
+	}
+
 	#main{
 		padding-top:45px;
 		//padding-top:76px;
